--- a/src/components/right-drawer/styles.module.scss
+++ b/src/components/right-drawer/styles.module.scss
@@ -229,7 +229,7 @@
   }
   .username {
     overflow: hidden;
-    line-height: 1;
+    line-height: 1.2;
 
     background: var(--gradient, var(--color, var(--primary-color)));
     -webkit-background-clip: text;
